# oly

./: .clang-format  .clang-tidy  .clangd  .gitignore  .justfile  CMakeLists.txt  LICENSE  README.md  hello.world  hl.txt  install.sh  test.lua
assets/: config.yaml  contents.typ  default_config.yaml  default_metadata.yaml  default_preamble.tex  latex_preamble.tex  metadata.yaml  preamble.tex  preamble.typ  preview.tex  preview.typ
assets/app/: oly.desktop
assets/extras/: _oly  get_nvim_colors.lua  tex.lua  typst.lua
assets/tex/: contents.tex  highlights.scm  preview.tex
assets/typst/: contents.typ  highlights.scm  preamble.typ  preview.typ
assets/typst/oly-scheme-handler/: oly-handler  oly.desktop
include/oly/: aops.hpp  commands.hpp  config.hpp  constants.hpp  contest.hpp  log.hpp  utils.hpp
include/oly/cmds/: add.hpp  alias.hpp  cmds.hpp  command.hpp  default.hpp  edit.hpp  generate.hpp  get_cmd.hpp  list.hpp  preview.hpp  remove.hpp  rename.hpp  search.hpp  show.hpp
src/: config.cpp  contest.cpp  log.cpp  main.cpp  utils.cpp
src/cmds/: add.cpp  alias.cpp  cmds.cpp  command.cpp  default.cpp  edit.cpp  generate.cpp  get_cmd.cpp  list.cpp  preview.cpp  remove.cpp  rename.cpp  search.cpp  show.cpp
